polishing before package